--- a/index.html
+++ b/index.html
@@ -19,6 +19,5 @@
         <div class="col-lg-12 col-md-12 col-sm-12 text-justify">
           <h1 class="display-4 text-left">STOP CREATING LOGOS FOR VULNS</h1>
           <p class="lead">Research gud, logos bad.</p>
-          
-          <div style="width:100%;height:0;padding-bottom:100%;position:relative;"><iframe src="https://giphy.com/embed/eVy46EWyclTIA" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/troll-you-mad-face-eVy46EWyclTIA">via GIPHY</a></p>
+          <img src="youmad.gif" alt="YAH YOU MAD">
           
